--- a/docs/modules/develop/pages/releases.adoc
+++ b/docs/modules/develop/pages/releases.adoc
@@ -229,9 +229,9 @@ After that, the header with the current version and link like `+## [0.20.0](http
 . Wait for the tests to finish and check that everything is passing before releasing the version.
 NOTE: When you bump the version, the generator tests will fail because the gems and NPM pacakges have not yet been actually released that we are now depending on. You may see errors such as `No matching version found for @decidim/browserslist-config@~0.xx.y` in the CI logs. This should be fine as long as you have ensured that the generators tests passed in the previous commit.
 . Run `git pull && bin/rake release_all`, this will create all the tags, push the commits and tags and release the gems to RubyGems.
-. Once all the gems are published you should create a new release at this repository, just go to the https://github.com/decidim/decidim/releases[releases page] and create a new one.
-. Once you have create the release with the release notes, update the `RELEASE_NOTES.md` at `release/x.y-stable`.
-Clear out the old notes and replace them with the `RELEASE_NOTES.md` template shown shown above in this document.
+. Once all the gems are published:
+ .. Re-run the failed generators tests at the release branch.
+ .. Create a new release at this repository, just go to the https://github.com/decidim/decidim/releases[releases page] and create a new one.
 . Update Decidim's Docker repository as explained in the Docker images section below.
 . Update Crowdin synchronization configuration with Github:
  .. Add the new `release/x.y-stable` branch.
@@ -295,9 +295,9 @@ After that, the header with the current version and link like `+## [0.20.0](http
 . Wait for the tests to finish and check that everything is passing before releasing the version.
 NOTE: When you bump the version, the generator tests will fail because the gems and NPM pacakges have not yet been actually released that we are now depending on. You may see errors such as `No matching version found for @decidim/browserslist-config@~0.xx.y` in the CI logs. This should be fine as long as you have ensured that the generators tests passed in the previous commit.
 . Run `git pull && bin/rake release_all`, this will create all the tags, push the commits and tags and release the gems to RubyGems.
-. Once all the gems are published you should create a new release at this repository, just go to the https://github.com/decidim/decidim/releases[releases page] and create a new one.
-. Once you have create the release with the release notes, update the `RELEASE_NOTES.md` at `release/x.y-stable`.
-Clear out the old notes and replace them with the `RELEASE_NOTES.md` template shown shown above in this document.
+. Once all the gems are published:
+ .. Re-run the failed generators tests at the release branch.
+ .. Create a new release at this repository, just go to the https://github.com/decidim/decidim/releases[releases page] and create a new one.
 . Update Decidim's Docker repository as explained in the Docker images section.
 
 == Docker images for each release
