Fix wrong capitalization in i18n values

--- a/decidim-blogs/config/locales/en.yml
+++ b/decidim-blogs/config/locales/en.yml
@@ -58,7 +58,7 @@ en:
             body: Body
             official_blog_post: Official post
             published_at: Publish time
-            title: title
+            title: Title
       posts:
         show:
           comments: Comments
