--- a/decidim-blogs/config/locales/en.yml
+++ b/decidim-blogs/config/locales/en.yml
@@ -3,7 +3,9 @@ en:
   activemodel:
     attributes:
       post:
+        decidim_author_id: Author
         published_at: Publish time
+        title:  Title
     models:
       decidim/blogs/create_post_event: New blog post
   activerecord:
