--- a/decidim-meetings/config/locales/en.yml
+++ b/decidim-meetings/config/locales/en.yml
@@ -25,6 +25,7 @@ en:
         description: Description
         end_time: End time
         id: ID
+        iframe_embed_type: Iframe embed type
         location: Location
         location_hints: Location hints
         online_meeting_url: Online meeting URL
@@ -34,13 +35,23 @@ en:
         registration_email_custom_content: Registration email custom content
         registration_form_enabled: Registration form enabled
         registration_terms: Registration terms
+        registration_type: Registration type
         registration_url: Registration URL
         registrations_enabled: Registrations enabled
+        reserved_slots: Reserved slots for this meeting
         show_embedded_iframe: Show embedded iframe for this URL
         start_time: Start time
         title: Title
         transparent: Transparent
         type_of_meeting: Type
+      meeting_agenda:
+        title: Title
+        visible: Visible
+      meeting_registration_invite:
+        email: Email
+        name: Name
+      validate_registration_code:
+        code: Code
     errors:
       models:
         meeting:
