--- a/decidim-core/config/locales/en.yml
+++ b/decidim-core/config/locales/en.yml
@@ -514,6 +514,10 @@ en:
         view_all: View all
       metrics:
         name: Organization metrics
+      static_page:
+        summary:
+          name: Summary
+          summary_content: Content
       stats:
         name: Organization statistics
       sub_hero:
