Update values for filters in meetings index to use icons

--- a/decidim-meetings/config/locales/en.yml
+++ b/decidim-meetings/config/locales/en.yml
@@ -486,7 +486,7 @@ en:
             all: All
             official: Official
             participants: Participants
-            user_groups: Groups
+            user_group: Groups
           scope: Scope
           search: Search
           type: Type
