Fix column reference on Topic
Suggested by code review

Co-authored-by: Antti Hukkanen <antti.hukkanen@mainiotech.fi>

--- a/decidim-admin/config/locales/en.yml
+++ b/decidim-admin/config/locales/en.yml
@@ -124,7 +124,7 @@ en:
         show_in_footer: Show in the footer
         slug: URL slug
         title: Title
-        topic: Topic
+        topic_id: Topic
         weight: Order position
       static_page_topic:
         description: Description
