Fix wrong capitalization in i18n values and add missing keys
* Fix wrong capitalization in i18n values

* Add missing i18n keys

* Replace 'Weight' with 'Order position'

So its consistent in all the forms.

* Fix key for meeting agenda item

* Remove unused attribute for show_embedded_iframe

* Fix key for scope

* Normalize :en locale

* Fix spec

* Fix typo

Suggested by code review

Co-authored-by: Antti Hukkanen <antti.hukkanen@mainiotech.fi>

* Fix column reference on Topic

Suggested by code review

Co-authored-by: Antti Hukkanen <antti.hukkanen@mainiotech.fi>

Co-authored-by: Antti Hukkanen <antti.hukkanen@mainiotech.fi>

--- a/decidim-blogs/config/locales/en.yml
+++ b/decidim-blogs/config/locales/en.yml
@@ -1,6 +1,11 @@
 ---
 en:
   activemodel:
+    attributes:
+      post:
+        decidim_author_id: Author
+        published_at: Publish time
+        title: Title
     models:
       decidim/blogs/create_post_event: New blog post
   activerecord:
@@ -54,7 +59,7 @@ en:
             body: Body
             created_at: Created at
             official_blog_post: Official post
-            title: title
+            title: Title
       posts:
         show:
           back: Back to list
