--- a/decidim-comments/config/locales/en.yml
+++ b/decidim-comments/config/locales/en.yml
@@ -65,6 +65,7 @@ en:
         alignment:
           against: Against
           in_favor: In favor
+        cancel_reply: Cancel reply
         confirm_destroy: Are you sure you want to delete this comment?
         delete: Delete
         deleted_at: Comment deleted on %{date}
