--- a/decidim-comments/config/locales/es.yml
+++ b/decidim-comments/config/locales/es.yml
@@ -44,7 +44,7 @@ es:
         form:
           body:
             label: Comentario
-            placeholder: '¿Qué piense sobre esto?'
+            placeholder: '¿Qué piensas sobre ésto?'
           form_error: El texto es necesario y no puede ser más largo de %{length}.
           submit: Enviar
           user_group_id:
@@ -113,7 +113,7 @@ es:
         form:
           body:
             label: Comentario
-            placeholder: '¿Qué piensas sobre ésto?'
+            placeholder: '¿Qué opinas sobre esto?'
           submit: Enviar
         title: Edita tu comentario
       up_vote_button:
