Integrate replies count

--- a/decidim-comments/config/locales/en.yml
+++ b/decidim-comments/config/locales/en.yml
@@ -74,6 +74,9 @@ en:
         edited: Edited
         hide_replies: Hide replies
         moderated_at: Comment moderated on %{date}
+        replies:
+          one: Reply
+          other: "%{count} replies"
         reply: Reply
         report:
           action: Report
