Fixing Upper case

--- a/decidim-admin/config/locales/en.yml
+++ b/decidim-admin/config/locales/en.yml
@@ -561,7 +561,7 @@ en:
         moderation: Global moderations
         newsletters: Newsletters
         participants: Participants
-        reported_users: Reported Participants
+        reported_users: Reported participants
         scope_types: Scope types
         scopes: Scopes
         settings: Settings
