--- a/decidim-templates/config/locales/en.yml
+++ b/decidim-templates/config/locales/en.yml
@@ -48,7 +48,7 @@ en:
             template_title: Template information
           index:
             confirm_delete: Are you sure you want to delete this template?
-            title: Block User Messages
+            title: Block user messages
           template_chooser:
             select_template: Select a template answer
         questionnaire_templates:
