--- a/decidim-admin/config/locales/en.yml
+++ b/decidim-admin/config/locales/en.yml
@@ -840,7 +840,19 @@ en:
       organization_homepage:
         edit:
           active_content_blocks: Active content blocks
+          add: Add content block
+          destroy_confirmation: Are you sure you want to delete this content block?
           inactive_content_blocks: Inactive content blocks
+          title: Page contents
+        content_blocks:
+          edit:
+            update: Update
+          create:
+            success: Content block successfully created
+            error: There was a problem trying to create this content block
+          destroy:
+            success: Content block successfully deleted
+            error: There was a problem trying to delete this content block
       organization_homepage_content_blocks:
         edit:
           update: Update
@@ -965,8 +977,18 @@ en:
           view: View public page
         content_blocks:
           active_content_blocks: Active content blocks
+          add: Add content block
+          destroy_confirmation: Are you sure you want to delete this content block?
           inactive_content_blocks: Inactive content blocks
           title: Page contents
+          edit:
+            update: Update
+          create:
+            success: Content block successfully created
+            error: There was a problem trying to create this content block
+          destroy:
+            success: Content block successfully deleted
+            error: There was a problem trying to delete this content block
         create:
           error: There was a problem creating a new page.
           success: Page created successfully.
